tests/ui/type-alias-impl-trait/recursive-tait-conflicting-defn-2.stderr
error: cannot resolve opaque type
  --> $DIR/recursive-tait-conflicting-defn-2.rs:15:13
   |
LL | fn bad() -> Op {
   |             ^^

error: aborting due to 1 previous error

